# Django_lesson_alex

./: .env.example  .gitignore  pyproject.toml
barbershop/: settings.py  urls.py
core/: admin.py  apps.py  context_processors.py  models.py  models2.py  signals.py  views.py
core/migrations/: 0001_initial.py  0002_alter_order_master.py  0002_master_order_appointment_date_order_date_created_and_more.py  0002_master_service_order_service_alter_master_photo.py  0003_remove_master_service_remove_order_service_and_more.py  0003_service_master_services_order_services.py  0004_alter_master_options_alter_order_options_and_more.py  0010_merge_20250817_1025.py
static/css/: main.css
templates/: base.html  include_order_card.html  landing.html  orders_list.html  test_template.html  thanks.html
users/migrations/: 0001_initial.py
